# cytoolz-stubs

./: README.md  pyproject.toml
src/cytoolz/: dicttoolz.pyi  itertoolz.pyi  recipes.pyi
src/cytoolz-stubs/: __init__.pyi  dicttoolz.pyi  functoolz.pyi  itertoolz.pyi  recipes.pyi
src/cytoolz-stubs/curried/: __init__.pyi
tests/: __init__.py  doctests.py  main.py
