[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cytoolz-stubs"
version = "0.1.1"
description = "Type stubs for cytoolz"
readme = "README.md"
requires-python = ">=3.13"

[tool.hatch.build.targets.wheel]
only-include = ["src"]

[tool.hatch.build.targets.wheel.sources]
"src/cytoolz" = "cytoolz"

[tool.hatch.build.targets.sdist]
include = ["src", "pyproject.toml", "README.md"]

[dependency-groups]
dev = [
    "cytoolz>=1.0.1",
]
