[project]
description     = "Type stubs for cytoolz"
name            = "cytoolz-stubs"
readme          = "README.md"
requires-python = ">=3.11"
version         = "0.2.1"

[build-system]
build-backend = "uv_build"
requires      = ["uv_build>=0.8.15,<0.9.0"]


[dependency-groups]
dev = ["cytoolz>=1.0.1"]
