[project]
    dependencies    = []
    description     = "Type stubs for cytoolz"
    name            = "cytoolz-stubs"
    readme          = "README.md"
    requires-python = ">=3.12"
    version         = "0.3.1"

[build-system]
    build-backend = "uv_build"
    requires      = ["uv_build>=0.8.15,<0.9.0"]

[dependency-groups]
    dev = ["cytoolz>=1.1.0", "doctester", "ruff>=0.14.9"]

[tool.uv.sources]
    doctester = { git = "https://github.com/OutSquareCapital/doctester.git" }
